miniextendr-macros/tests/ui/derive_altrep_raw_rejects_subset.rs
//! Test: ALTREP raw rejects subset option.

use miniextendr_macros::AltrepRaw;

#[derive(AltrepRaw)]
#[altrep(subset)]
struct MyData {
    len: usize,
}

fn main() {}
